--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <!-- Search Section -->
         <section class="container mt-5">
             <h1 class="title text-center fw-bold text-white" >EXPLORE A NATION</h1>
-            <div class="input-bg input-group mb-3 shadow  ">
+            <div class="input-group mb-3 shadow  ">
                 <input class="form-control" list="listCountries" type="text" placeholder="Search a Country" id="searchInput">
-                <button class="btn btn-white border border-white text-white" type="button" id="searchCountry">Search</button>
+                <button class="btn btn-white border border-white rounded-end-2 text-white" type="button" id="searchCountry">Search</button>
                 <datalist id="listCountries">
                     <option value="Philippines">
                     <option value="Singapore">
